samples/_failures_safe/1761322247_afecbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e03ef26e.c: In function ‘main’:
./samples/SAFE/__tmp_e03ef26e.c:145:90: error: expected ‘)’ at end of input
  145 |             printf("%s [%s] %s\n", entries[i].timestamp, level_to_string(entries[i].level
      |                                                                         ~                ^
      |                                                                                          )
./samples/SAFE/__tmp_e03ef26e.c:145:13: error: expected declaration or statement at end of input
  145 |             printf("%s [%s] %s\n", entries[i].timestamp, level_to_string(entries[i].level
      |             ^~~~~~
./samples/SAFE/__tmp_e03ef26e.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e03ef26e.c:145:13: error: expected declaration or statement at end of input
